# rest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  tag-release.yml
rest-macros/: Cargo.toml
rest-macros/src/: lib.rs
src/: config.rs  events.rs  lib.rs  reporter.rs
src/backend/assertions/: assertion.rs  sentence.rs
src/backend/fixtures/: mod.rs
src/backend/matchers/: boolean.rs  collection.rs  equality.rs  float.rs  hashmap.rs  mod.rs  numeric.rs  option.rs  panic.rs  result.rs  string.rs
src/backend/modifiers/: and.rs  not.rs  or.rs
src/frontend/: console.rs
tests/: fixture_test.rs  lifecycle_test.rs  module_fixtures_test.rs
wiki/: Float-Matchers.md  Home.md
