[package]
name = "rest"
version = "0.5.1"
edition = "2024"
authors = ["Romain Laneuville<romain.laneuville@hotmail.fr>"]
description = "A fluent, Jest-like testing library for Rust"
repository = "https://github.com/mister-good-deal/rest"
license = "MIT"
keywords = ["testing", "test", "jest", "fluent", "assertions"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
regex = "1.10.3"
colored = "2.0.4"
ctor = "0.2.7"
rest-macros = { path = "./rest-macros", version = "0.5.1" }
cruet = "0.15.0"

[dev-dependencies]

[workspace]
members = [
    "rest-macros"
]
