[package]
name = "rest-macros"
version = "0.6.0"
edition = "2024"
authors = ["Romain Laneuville<romain.laneuville@hotmail.fr>"]
description = "Procedural macros for rest"
repository = "https://github.com/mister-good-deal/rest"
license = "MIT"
keywords = ["testing", "test", "jest", "fluent", "assertions"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"